--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "arrowParens": "always",
   "tabWidth": 2,
   "endOfLine": "lf",
-  "jsxBracketSameLine": false
+  "jsxBracketSameLine": false,
+  "quoteProps": "consistent"
 }
